* update links * add pm2 process file * update build system

--- a/app/views/flortrait.html
+++ b/app/views/flortrait.html
@@ -129,22 +129,38 @@
 
   <div class="row margin-t-50 margin-b-50">
     <div class="col-md-offset-3 col-md-6 col-lg-offset-4 col-lg-4 halign-center">
-      <span class="icon-laptop flortrait-logo-headline"></span>
       <h1><strong>Online</strong></h1>
       <hr>
       <div class="row">
         <div class="col-md-offset-1 col-md-10 col-sm-offset-2 col-sm-8">
-          <a class="btn btn-lg btn-default btn-block" href="http://selekkt.com/brands/playfulsolutions"
-             target="_blank">selekkt - Heim für junges Design</a>
-          <a class="btn btn-lg btn-default btn-block" href="https://www.heimatwerke.de/catalogsearch/result/?q=Flortrait"
-             target="_blank">HEIMATWERKE.DE</a>
+          <div class="visible-xs">
+            <a class="btn btn-lg btn-default btn-block" href="https://www.etsy.com/shop/playfulsolutions"
+               target="_blank">Etsy</a>
+            <a class="btn btn-lg btn-default btn-block" href="http://selekkt.com/brands/playfulsolutions"
+               target="_blank">selekkt - Heim für junges Design</a>
+            <a class="btn btn-lg btn-default btn-block" href="https://www.heimatwerke.de/catalogsearch/result/?q=Flortrait"
+               target="_blank">HEIMATWERKE.DE</a>
+          </div>
+          <div class="hidden-xs">
+            <h3>
+              <a href="https://www.etsy.com/shop/playfulsolutions"
+                 target="_blank">Etsy</a>
+            </h3>
+            <h3>
+              <a href="http://selekkt.com/brands/playfulsolutions"
+                 target="_blank">selekkt - Heim für junges Design</a>
+            </h3>
+            <h3>
+              <a href="https://www.heimatwerke.de/catalogsearch/result/?q=Flortrait"
+                 target="_blank">HEIMATWERKE.DE</a>
+            </h3>
+          </div>
         </div>
       </div>
     </div>
   </div>
   <div class="row margin-t-50 margin-b-50">
     <div class="col-md-offset-3 col-md-6 col-lg-offset-4 col-lg-4 halign-center">
-      <span class="icon-easel flortrait-logo-headline"></span>
       <h1><strong>Im Atelier</strong></h1>
       <hr>
       <p>(Nach Absprache)</p>
@@ -160,18 +176,8 @@
   </div>
   <div class="row margin-t-50 margin-b-50">
     <div class="col-md-offset-3 col-md-6 col-lg-offset-4 col-lg-4 halign-center">
-      <span class="icon-home-outline flortrait-logo-headline"></span>
       <h1><strong>Im Ladengeschäft</strong></h1>
       <hr>
-      <h3 class="margin-b-50">
-        <address>
-          <strong>Vielfach</strong><br>
-          Karl-Liebknecht-Str. 66<br>
-          04275 Leipzig<br>
-          <abbr title="Website">Web:</abbr> <a href="http://www.vielfach-leipzig.de"
-                                               target="_blank">vielfach-leipzig.de</a>
-        </address>
-      </h3>
       <h3>
         <address>
           <strong>Sächsisches Heimatwerk</strong><br>
