--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -41,9 +41,15 @@
     <div class="col-md-offset-0 col-md-3 col-sm-offset-0 col-sm-12 col-xs-offset-0 col-xs-12">
       <h2>Im Web</h2>
       <hr>
-      <h1><a class="text-default" href="https://www.instagram.com/playfuldesignsolutions/" target="_blank"><i
-        class="fa fa-instagram margin-r"></i></a><a class="text-default" href="https://www.facebook.com/flortrait/"
-                                                    target="_blank"><i class="fa fa-facebook-square"></i></a></h1>
+      <h3>
+        <span class="fa fa-instagram margin-r"></span>
+        <a class="text-default" href="https://www.instagram.com/playfuldesignsolutions/" target="_blank">Instagram</a>
+      </h3>
+      <h3>
+        <span class="fa fa-facebook-square margin-r"></span>
+        <a class="text-default" href="https://www.facebook.com/flortrait/" target="_blank">Facebook
+        </a>
+      </h3>
     </div>
   </div>
 </div>
