--- a/app/views/flortrait.html
+++ b/app/views/flortrait.html
@@ -2,7 +2,7 @@
   <!-- INTRO -->
   <div class="row">
     <div class="col-xs-12 hidden-md hidden-sm hidden-lg hidden-print">
-      <div class="img-flortrait-s01 margin-t-20"></div>
+      <div class="img-flortrait-s01xs margin-t-20"></div>
     </div>
     <div
       class="col-lg-offset-2 col-lg-4 col-md-offset-1 col-md-4 col-sm-offset-1 col-sm-5 col-xs-12 halign-center-xs"
