--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,7 +4,6 @@ $line-height-base: 1.8;
 $line-height-small: 1.8;
 $headings-line-height:    1.2 !default;
 
-
 // Core variables and mixins
 @import "bootstrap-sass-official/assets/stylesheets/bootstrap/variables";
 @import "bootstrap-sass-official/assets/stylesheets/bootstrap/mixins";
@@ -142,6 +141,50 @@ $headings-line-height:    1.2 !default;
     background-size: contain;
   }
 
+}
+
+$fa-font-path: "../styles/fonts";
+@import "../../bower_components/font-awesome/scss/font-awesome";
+
+/* roboto-regular - latin */
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../styles/fonts/roboto-v18-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local('Roboto'), local('Roboto-Regular'),
+  url('../styles/fonts/roboto-v18-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('../styles/fonts/roboto-v18-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+  url('../styles/fonts/roboto-v18-latin-regular.woff') format('woff'), /* Modern Browsers */
+  url('../styles/fonts/roboto-v18-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('../styles/fonts/roboto-v18-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
+}
+
+/* lato-300 - latin */
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 300;
+  src: url('../styles/fonts/lato-v14-latin-300.eot'); /* IE9 Compat Modes */
+  src: local('Lato Light'), local('Lato-Light'),
+  url('../styles/fonts/lato-v14-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('../styles/fonts/lato-v14-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
+  url('../styles/fonts/lato-v14-latin-300.woff') format('woff'), /* Modern Browsers */
+  url('../styles/fonts/lato-v14-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('../styles/fonts/lato-v14-latin-300.svg#Lato') format('svg'); /* Legacy iOS */
+}
+/* lato-300italic - latin */
+@font-face {
+  font-family: 'Lato';
+  font-style: italic;
+  font-weight: 300;
+  src: url('../styles/fonts/lato-v14-latin-300italic.eot'); /* IE9 Compat Modes */
+  src: local('Lato Light Italic'), local('Lato-LightItalic'),
+  url('../styles/fonts/lato-v14-latin-300italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('../styles/fonts/lato-v14-latin-300italic.woff2') format('woff2'), /* Super Modern Browsers */
+  url('../styles/fonts/lato-v14-latin-300italic.woff') format('woff'), /* Modern Browsers */
+  url('../styles/fonts/lato-v14-latin-300italic.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('../styles/fonts/lato-v14-latin-300italic.svg#Lato') format('svg'); /* Legacy iOS */
 }
 
 @font-face {
