added fonts attributation

--- a/app/views/impressum.html
+++ b/app/views/impressum.html
@@ -66,4 +66,19 @@
         Deutschland heruntergeladen werden dürfen/können, obliegt nicht der Verantwortung von Anja Wippler.</p>
     </div>
   </div>
+  <div class="row">
+    <div class="col-md-12">
+      <h1>Schriften</h1>
+      <h3>Lato</h3>
+      <p>Copyright (c) 2010-2011 by tyPoland Lukasz Dziedzic (team@latofonts.com) with Reserved Font Name "Lato".
+        Licensed under the <a href="http://scripts.sil.org/OFL" target="_blank">SIL Open Font License, Version 1.1</a>.
+      </p>
+      <h3>Roboto</h3>
+      <p>Copyright 2011 Google Inc. All Rights Reserved. Licensed under the <a
+        href="http://www.apache.org/licenses/LICENSE-2.0.html" target="_blank">Apache License 2.0.</a></p>
+      <h3>Font-Awesome</h3>
+      <p>Licensed under the <a href="http://scripts.sil.org/OFL" target="_blank">SIL Open Font License, Version 1.1</a>
+      </p>
+    </div>
+  </div>
 </div>
