update postal address

--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -23,8 +23,8 @@
         <address>
           playful solutions<br>
           Anja Wippler<br>
-          Könneritzstraße 25<br>
-          D-01069 Dresden<br>
+          Anton-Graff-Str. 28<br>
+          D-01309 Dresden<br>
         </address>
       </h3>
     </div>
