--- a/app/views/flortrait.html
+++ b/app/views/flortrait.html
@@ -167,8 +167,8 @@
       <h3>
         <address>
           <strong>Anja Wippler | playfulsolutions</strong><br>
-          Könneritzstr. 25<br>
-          01069 Dresden<br>
+          Anton-Graff-Str. 28<br>
+          01309 Dresden<br>
           <abbr title="E-Mail">Mail:</abbr> <a href="mailto:anja.wippler@icloud.com">anja.wippler@icloud.com</a>
         </address>
       </h3>
